<resources>
    <string name="app_name">游民星空</string>
    <string name="title_activity_settings">设置</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="title_home">资讯</string>
    <string name="title_game_guide">攻略</string>
    <string name="title_game_reviews">评测</string>
    <string name="title_gallery">图库</string>
    <string name="title_user">用户</string>
    <string name="title_news_tab1">首页</string>
    <string name="title_news_tab2">娱乐</string>
    <string name="title_news_tab3">囧图</string>
    <string name="title_article_tab1">正文</string>
    <string name="title_article_tab2">评论</string>
    <string name="succeed_comment_load">评论加载成功</string>
    <string name="error_comment_load">评论加载失败</string>
    <string name="no_search_result">搜索结果为空</string>
    <string name="search_faild">搜索失败</string>
    <string name="wait">请稍等…</string>
    <string name="no_more">没有了，没有奇迹了</string>
    <string name="handbook_search">游戏攻略查询</string>
    <string name="handbook_search_hint">输入游戏名或攻略标题</string>
    <string name="reviews_search_hint">输入游戏名</string>
    <string name="sort_type">排序方式</string>
    <string name="newest">最新</string>
    <string name="hotest">最热</string>
    <string name="earliest">最早</string>
    <string name="sort_hot_asc">按热度升序</string>
    <string name="sort_time_asc">按时间升序</string>
    <string name="sort_evaluation_asc">按评价升序</string>
    <string name="sort_hot_desc">按热度降序</string>
    <string name="sort_time_desc">按时间降序</string>
    <string name="sort_evaluation_desc">按评价降序</string>
    <string name="listed">已上市</string>
    <string name="unlisted">未上市</string>
    <string name="end">-END-</string>
    <string name="article_nav">文章导航</string>
    <string name="updata_successed">更新成功</string>
    <string name="updata_failed">更新失败</string>
    <string name="player_comment">玩家评论</string>
    <string name="delete_select">删除所选</string>

    <string name="all">全部</string>
    <string name="game_genres">游戏类型</string>
    <string name="game_platform">游戏平台</string>
    <string name="sale_date">发售时间</string>
    <string name="game_company">游戏厂商</string>
    <string name="official_chinese">官方中文</string>
    <string name="game_tag">游戏标签</string>
    <string name="detail_review">评测详情</string>

    <string name="title">游戏名</string>
    <string name="en_title">英文名</string>
    <string name="game_make">制作</string>
    <string name="chinese">中文</string>
    <string name="listed_time">发行时间</string>
    <string name="game_score">游戏评分</string>
    <string name="more_images">更多图片</string>

    <string name="night_mode">深色模式</string>
    <string name="night_mode_light">浅色</string>
    <string name="night_mode_night">深色</string>
    <string name="night_mode_default">系统默认(跟随系统)</string>

    <string name="man">人</string>
    <string name="played">玩过</string>
    <string name="want_play">想玩</string>
    <string name="star">星</string>
    <string name="upvote">顶</string>
    <string name="downvote">踩</string>
    <string name="not_enough_man_reviews">评价人数不足</string>

    <string name="user_name">用户名</string>
    <string name="user_id">用户ID</string>
    <string name="user_password">用户密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="my_favorites">我的收藏</string>
    <string name="my_settings">我的设置</string>
    <string name="sign_out">退出登录</string>
    <string name="sign_out_success">退出登录成功</string>
    
    <string name="loading">正在加载…</string>
    <string name="comment">评论</string>
    <string name="no_comment">暂时还没有评论</string>
    <string name="hot_comment">热门评论</string>
    <string name="all_comment">全部评论</string>

    <string name="bottom_bar_about">底栏相关</string>
    <string name="bottom_bar_style">底栏样式</string>
    <string name="bottom_bar_labeled">标题全展开</string>
    <string name="bottom_bar_unlabeled">标题全收缩</string>
    <string name="bottom_bar_selected">标题选中展开</string>
    
    <string name="read_about">阅读相关</string>
    <string name="article_text_size">文章字体大小</string>
    <string name="smaller">特小</string>
    <string name="small">小</string>
    <string name="normal">中</string>
    <string name="big">大</string>
    <string name="bigger">特大</string>
    <string name="save_read_progress">阅读进度记录</string>
    <string name="no_sure">可能不准确</string>
    <string name="save_article_click">文章点击记录</string>
    <string name="clear_save">清除记录</string>
    <string name="click_clear_save">点击清除记录</string>

    <string name="favorites">收藏</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="success_favor">收藏成功</string>
    <string name="repeat_favor">收藏已存在</string>
    
    <string name="article">文章</string>
    <string name="handbook">攻略</string>
    <string name="game">游戏</string>

    <string name="select_avatar">选择头像</string>
    <string name="clear_avatar">删除头像</string>
    <string name="please_input_user_name">请输入用户名！</string>
    <string name="please_input_user_password">请输入密码！</string>
    <string name="please_confirm_user_password">请确认密码！</string>
    <string name="error_register">注册异常，用户可能已存在！</string>
    <string name="success_register">注册成功！</string>
    <string name="success_login">登录成功！</string>
    <string name="error_login">密码错误或用户不存在！</string>
    <string name="error_password">密码错误！</string>
    <string name="error_password_inconsistent">密码不一致！</string>
    <string name="error_user_not_exist">该用户不存在！</string>
</resources>
