<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.news.gamersky.fragment.NewsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_homepage" >
    </fragment>

    <fragment
        android:id="@+id/navigation_game_guide"
        android:name="com.news.gamersky.fragment.EntertainmentFragment"
        android:label="@string/title_game_guide"
        tools:layout="@layout/fragment_entertainment" />

    <fragment
        android:id="@+id/navigation_game_reviews"
        android:name="com.news.gamersky.fragment.InterestingImagesFragment"
        android:label="@string/title_game_reviews"
        tools:layout="@layout/fragment_interesting_images" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.news.gamersky.fragment.EntertainmentFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_entertainment" />

</navigation>